# ff-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
app/: main.py  utils.py
tests/: conftest.py  test_main.py
tests/fixtures/docs/: doc1.txt  doc2.txt  doc3.txt  newdoc.txt
